--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 server.contextPath=/
-spring.thymeleaf.cache=false
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/horacerta
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
+
+spring.jackson.time-zone: America/Sao_Paulo
