--- a/application.properties
+++ b/application.properties
@@ -3,7 +3,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 server.contextPath=/
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/HoraCerta
+spring.datasource.url=jdbc:postgresql://localhost:5432/horacerta
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
