--- a/application.properties
+++ b/application.properties
@@ -3,6 +3,8 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 server.contextPath=/
 spring.jpa.hibernate.ddl-auto=update
 
+server.port=10000
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/horacerta
 spring.datasource.username=postgres
 spring.datasource.password=postgres
