BACKEND - Configuração de ambiente de desenvolvimento

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jackson.time-zone: America/Sao_Paulo
+
+spring.profiles.active=desenvolvedor
