--- a/application.properties
+++ b/application.properties
@@ -9,3 +9,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/horacerta
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
+
+spring.profiles.active=desenvolvedor
+#spring.profiles.active=producao
