--- a/application.properties
+++ b/application.properties
@@ -9,3 +9,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/horacerta
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
+
+
+itec.teste=true
+
+spring.jackson.time-zone: America/Sao_Paulo
