FRONTEND - AUTENTICAÇÃO BÁSICA

--- a/application.properties
+++ b/application.properties
@@ -10,5 +10,5 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 
-spring.profiles.active=desenvolvedor
+spring.profiles.active=pedro
 #spring.profiles.active=producao
