--- a/application.properties
+++ b/application.properties
@@ -16,5 +16,5 @@ itec.teste=true
 spring.jackson.time-zone: America/Sao_Paulo
 spring.jpa.hibernate.ddl-auto=update
 
-spring.profiles.active=desenvolvedor
+spring.profiles.active=a
 #spring.profiles.active=producao
