--- a/application.properties
+++ b/application.properties
@@ -17,5 +17,5 @@ spring.jackson.time-zone: America/Sao_Paulo
 spring.jpa.hibernate.ddl-auto=update
 
 
-spring.profiles.active=prod
+spring.profiles.active=desenvolvedor
 #spring.profiles.active=producao
