BACKEND - AUTENTICAÇÃO BÁSICA

--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,6 @@
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 server.contextPath=/
-spring.jpa.hibernate.ddl-auto=update
 
 server.port=10000
 
@@ -9,13 +8,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/horacerta
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
-
+spring.jpa.generate-ddl=true
 
 itec.teste=true
 
 spring.jackson.time-zone: America/Sao_Paulo
-spring.jpa.hibernate.ddl-auto=update
-
 
 spring.profiles.active=prod
-#spring.profiles.active=producao
