--- a/frontend/horacerta/package.json
+++ b/frontend/horacerta/package.json
@@ -27,9 +27,10 @@
     "ionicons": "^3.0.0",
     "jquery": "^3.3.1",
     "material-design-lite": "^1.3.0",
+    "ngx-cookie": "^4.0.2",
     "rxjs": "^6.3.1",
-    "zone.js": "^0.8.26",
-    "rxjs-compat": "^6.0.0-rc.0"
+    "rxjs-compat": "^6.0.0-rc.0",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.0",
