adicionando ao git ignore

--- a/application.properties
+++ b/application.properties
@@ -15,6 +15,6 @@ itec.teste=true
 spring.jackson.time-zone: America/Sao_Paulo
 
 
-spring.profiles.active=desenvolvedor
+spring.profiles.active=producao
 
 
