--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,19 @@
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 server.contextPath=/
-spring.jpa.hibernate.ddl-auto=update
 
 server.port=10000
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/horacerta
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
+
+itec.teste=true
 
 spring.jackson.time-zone: America/Sao_Paulo
 
-spring.profiles.active=desenvolvedor
+spring.profiles.active=producao
+
 
