--- a/application.properties
+++ b/application.properties
@@ -7,13 +7,13 @@ server.port=10000
 spring.datasource.url=jdbc:postgresql://localhost:5432/horacerta
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 
 itec.teste=true
 
 spring.jackson.time-zone: America/Sao_Paulo
 
-spring.profiles.active=producao
+spring.profiles.active=desenvolvedor
 
 
