--- a/frontend/horacerta/package.json
+++ b/frontend/horacerta/package.json
@@ -28,6 +28,7 @@
     "jquery": "^3.3.1",
     "material-design-lite": "^1.3.0",
     "ngx-cookie": "^4.0.2",
+    "ngx-mask": "^6.1.3",
     "rxjs": "^6.3.1",
     "rxjs-compat": "^6.0.0-rc.0",
     "zone.js": "^0.8.26"
