--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,8 @@ server.port=10000
 spring.datasource.url=jdbc:postgresql://localhost:5432/horacerta
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
-
-itec.teste=true
 
 spring.jackson.time-zone: America/Sao_Paulo
 
