--- a/frontend/horacerta/package.json
+++ b/frontend/horacerta/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "horacerta",
   "version": "0.0.0",
@@ -29,6 +28,7 @@
     "jquery": "^3.3.1",
     "material-design-lite": "^1.3.0",
     "ngx-cookie": "^4.0.2",
+    "ngx-image-cropper": "^1.3.5",
     "ngx-mask": "^6.1.3",
     "rxjs": "^6.3.1",
     "rxjs-compat": "^6.0.0-rc.0",
